<resources>
    <string name="app_name">MeiShi</string>
    <string name="initNavBarTitle">美食点评</string>
    <string name="username">用户名</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="regist">立即注册</string>
    <string name="login_btn">登 录</string>
    <string name="re_username">请输入用户名</string>
    <string name="re_phone">请输入手机号码</string>
    <string name="re_password">请输入密码</string>
    <string name="con_password">请确认密码</string>
    <string name="register_btn">注 册</string>
    <string name="logout">退出登录</string>
    <string name="old_password">请输入原密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="con_new_password">请确认新密码</string>
    <string name="change_btn">确认</string>
    <string name="recommend">推荐歌单</string>
    <string name="pop">最热音乐</string>
    <string name="good">菜品</string>
    <string name="title_shop">店铺</string>
    <string name="title_collection">收藏</string>
    <string name="title_me">个人</string>
    <string name="tempDesc">这里是要加地址还是描述这里是要加地址还是描述这里是要加地址还是描述这里是要加地址还是描述这里是要加地址还是描述这里是要加地址还是描述这里是要加地址还是描述这里是要加地址还是描述</string>
    <string name="comment">用户评论</string>
    <string name="tempComment">这是一条评论</string>
    <string name="delete">删除</string>

</resources>
